[gd_scene load_steps=3 format=2]

[ext_resource path="res://screens/Screen.gd" type="Script" id=1]
[ext_resource path="res://main/MenuTheme.tres" type="Theme" id=2]

[node name="Screen" type="Node2D"]
script = ExtResource( 1 )

[node name="ContinueTimer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true

[node name="RevealTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="StartPrompt" type="Label" parent="."]
margin_top = 248.0
margin_right = 256.0
margin_bottom = 256.0
theme = ExtResource( 2 )
text = "Press any button to start"
align = 1

[connection signal="timeout" from="ContinueTimer" to="." method="_on_ContinueTimer_timeout"]
